Refactor log structure generation and fix log ID handling
Replaced toNestedJson() with generateNestedJsonStructure() in InMemoryFlushHandlerImpl, providing a more robust and hierarchical JSON output for blocks and logs, including handling of invalid block IDs. Fixed a logic error in VFLCallable where currentLogId was only updated for SUB_BLOCK_START_PRIMARY log type. Updated ThreadVFLTest to use the new JSON generation method.